--- a/Documentation/css/bootstrap.css
+++ b/Documentation/css/bootstrap.css
@@ -4088,8 +4088,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   overflow-x: visible;
   -webkit-overflow-scrolling: touch;
   border-top: 1px solid transparent;
-  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
-          box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
+  -webkit-box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0);
+          box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0);
 }
 .navbar-collapse.in {
   overflow-y: auto;
@@ -4098,8 +4098,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   .navbar-collapse {
     width: auto;
     border-top: 0;
-    -webkit-box-shadow: none;
-            box-shadow: none;
+    -webkit-box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0);
+            box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0);
   }
   .navbar-collapse.collapse {
     display: block !important;
